--- a/index.html
+++ b/index.html
@@ -7,40 +7,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ui color piker clone</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                screens: {
+                    'xs': '400px',
+                    'sm': '640px',
+                    'lg': '1024px',
+                }
+            }
+        }
+    </script>
 </head>
 
-<body class="bg-[#0d0d0d]">
+<body class="bg-[#090628]">
     <section aria-label="header section">
         <div class="text-center">
-            <h1 class="text-white text-bold text-7xl">Click to copy</h1>
-            <h6 class="text-white text-semibold text-3xl">Always choose a perfect color</h6>
+            <h1 class="text-white text-bold text-3xl sm:text-7xl">Click to copy</h1>
+            <h6 class="text-white text-semibold text-xl sm:text-3xl mt-2 sm:mt-5">Always choose a perfect color</h6>
         </div>
     </section>
-    <section aria-label="red-colors" class="mt-5">
-        <h4 class="text-white font-semibold ml-10 text-[30px]">Feeling Red</h4>
-        <div class="flex flex-row space-x-10 max-w-7xl justify-center mt-10 mx-auto">
-            <div class="bg-[#FF6263] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#DE4839] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#BF3325] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#E6425E] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#E83A59] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#EF5354] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#EB4D4B] h-60 w-40 rounded-md"></div>
-        </div>
-    </section>
-    <section aria-label="blue-colors" class="mt-5">
-        <h4 class="text-white font-semibold ml-10 text-[30px]">Feeling Blue</h4>
-        <div class="grid  grid-cols-7 gap-y-10 gap-x-6 text-center max-w-7xl mx-auto">
-            <div class="bg-[#FF6263] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#DE4839] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#BF3325] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#E6425E] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#E83A59] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#EF5354] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#EB4D4B] h-60 w-40 rounded-md"></div>
-            <div class="bg-[#EB4D4B] h-60 w-40 rounded-md"></div>
-        </div>
-    </section>
+    <div class="my-5">
+        <section aria-label="red-colors" class="mt-5">
+            <h4 class="text-white font-semibold ml-10 text-[30px]">Red Colors</h4>
+            <div class="flex flex-wrap justify-center sm:justify-start flex-row max-w-7xl  mt-10 mx-auto" id="redsec">
+                <!-- JavaScript -->
+            </div>
+        </section>
+        <section aria-label="blue-colors" class="mt-5">
+            <h4 class="text-white font-semibold ml-10 text-[30px]">Blue Colors</h4>
+            <div class="flex flex-wrap justify-center sm:justify-start flex-row max-w-7xl  mt-10 mx-auto" id="bluesec">
+                <!-- JavaScript -->
+            </div>
+        </section>
+        <section aria-label="green-colors" class="mt-5">
+            <h4 class="text-white font-semibold ml-10 text-[30px]">Green Colors</h4>
+            <div class="flex flex-wrap justify-center sm:justify-start flex-row max-w-7xl  mt-10 mx-auto" id="greensec">
+                <!-- JavaScript -->
+            </div>
+        </section>
+        <section aria-label="yellow-colors" class="mt-5">
+            <h4 class="text-white font-semibold ml-10 text-[30px]">Yellow Colors</h4>
+            <div class="flex flex-wrap justify-center sm:justify-start flex-row max-w-7xl  mt-10 mx-auto"
+                id="yellowsec">
+                <!-- JavaScript -->
+            </div>
+        </section>
+        <section aria-label="fancy-colors" class="mt-5">
+            <h4 class="text-white font-semibold ml-10 text-[30px]">Fancy Colors</h4>
+            <div class="flex flex-wrap justify-center sm:justify-start flex-row max-w-7xl  mt-10 mx-auto" id="fancysec">
+                <!-- JavaScript -->
+            </div>
+        </section>
+
+    </div>
+
+
 </body>
+<script src="./js/index.js"></script>
 
 </html>
